<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <TextView
        android:id="@+id/emergencyContactTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/contactsTitle"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
    />

    <TextView
        android:id="@+id/contact1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/contact1"
        app:layout_constraintTop_toBottomOf="@+id/emergencyContactTitle"
        app:layout_constraintLeft_toLeftOf="parent"
    />

    <TextView
        android:id="@+id/contact1Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@id/contact1"
        app:layout_constraintLeft_toLeftOf="parent"
    />

    <EditText
        android:id="@+id/contact1NameInput"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/contact1"
        app:layout_constraintLeft_toRightOf="@id/contact1Name"
        android:autofillHints=""
        android:inputType="text"
        android:hint="@string/nameHint"
        android:textSize="12sp"
    />

    <TextView
        android:id="@+id/contact1Number"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:text="@string/number"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@id/contact1Name"
        app:layout_constraintLeft_toLeftOf="parent"
    />

    <EditText
        android:id="@+id/contact1NumberInput"
        android:layout_width="265dp"
        android:layout_height="50dp"
        android:layout_marginStart="2dp"
        app:layout_constraintTop_toBottomOf="@id/contact1NameInput"
        app:layout_constraintLeft_toRightOf="@id/contact1Number"
        android:inputType="phone"
        android:autofillHints=""
        android:hint="@string/numberHint"
        android:textSize="12sp"
    />

    <TextView
        android:id="@+id/contact2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:text="@string/contact2"
        app:layout_constraintTop_toBottomOf="@+id/contact1Number"
        app:layout_constraintLeft_toLeftOf="parent"
    />

    <TextView
        android:id="@+id/contact2Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@id/contact2"
        app:layout_constraintLeft_toLeftOf="parent"
    />

    <EditText
        android:id="@+id/contact2NameInput"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:inputType="text"
        android:autofillHints=""
        android:hint="@string/nameHint"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/contact2"
        app:layout_constraintLeft_toRightOf="@id/contact2Name"
    />

    <TextView
        android:id="@+id/contact2Number"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:text="@string/number"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@id/contact2Name"
        app:layout_constraintLeft_toLeftOf="parent"
    />

    <EditText
        android:id="@+id/contact2NumberInput"
        android:layout_width="265dp"
        android:layout_height="50dp"
        android:layout_marginStart="2dp"
        app:layout_constraintTop_toBottomOf="@id/contact2NameInput"
        app:layout_constraintLeft_toRightOf="@id/contact2Number"
        android:autofillHints=""
        android:inputType="phone"
        android:hint="@string/numberHint"
        android:textSize="12sp"
    />

    <View
        android:id="@+id/hrLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c0c0c0"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/contact2Number"
        app:layout_constraintLeft_toRightOf="parent"
    />

    <TextView
        android:id="@+id/SOSSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/SOSSettings"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/hrLine"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
    />

    <CheckBox
        android:id="@+id/notify911"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SOS911"
        android:layout_marginTop="25dp"
        android:layout_marginStart="30dp"
        android:textSize="13sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SOSSettings"
    />

    <CheckBox
        android:id="@+id/notifyCloseby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SOSCloseBy"
        android:layout_marginTop="25dp"
        android:layout_marginStart="30dp"
        android:textSize="13sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notify911"
    />

    <CheckBox
        android:id="@+id/helpCloseby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helpCloseBy"
        android:layout_marginTop="25dp"
        android:layout_marginStart="30dp"
        android:textSize="13sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notifyCloseby"
    />

</androidx.constraintlayout.widget.ConstraintLayout>