<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signupActivity">
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:text="@string/title"
        android:textSize="25sp"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="55dp"
        />

    <EditText
        android:id="@+id/userName"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:inputType="text"
        android:hint="@string/nameHint"
        android:textSize="12sp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/userName"
        android:inputType="textPassword"
        android:autofillHints=""
        android:hint="@string/passwordHint"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/signUpButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUpnButton"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:onClick="signup"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="261dp"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
    />

</androidx.constraintlayout.widget.ConstraintLayout>