<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/trackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trackButton"
        android:layout_marginTop="100dp"
        android:textSize="20sp"
        android:onClick="trackButtonClick"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="261dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
    />

    <Button
        android:id="@+id/sosButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        android:text="@string/sosButton"
        android:textSize="40sp"
        android:background="@drawable/round_button_bg"
        android:padding="15dp"
        android:onClick="SOSButtonClick"
        app:layout_constraintTop_toBottomOf="@id/trackButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
    />

    <Button
        android:id="@+id/mapButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mapButton"
        android:layout_marginTop="100dp"
        android:textSize="20sp"
        android:onClick="openMap"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="261dp"
        app:layout_constraintTop_toBottomOf="@id/sosButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
    />

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="22dp"
        android:src="@drawable/settings_icon"
        android:background="@null"
        android:onClick="openSettings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/settingsButtonDesc" />
</androidx.constraintlayout.widget.ConstraintLayout>